# FOCUS-3D

./: .copier-answers.yml  .gitignore  LICENSE  README.md  environment-win.yaml  environment.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: test_and_deploy.yml
example/: checkpoint.md
notebooks/: 01_inference.ipynb  02_finetune.ipynb
src/cellseg/: __init__.py  _reader.py  _sample_data.py  _widget.py  _writer.py  analysis.py  napari.yaml  reconstruction.py  segmentation.py
src/cellseg/analysis/: analysis.py
src/cellseg/basic/: curation.py
src/cellseg/segmentation/: mask2former_adapter.py  segmentation.py
src/cellseg/segmentation/FOCUS3D/: click_inference.py  fine_tune.py  inference.py  test.ipynb  train_net_3d.py
src/cellseg/segmentation/FOCUS3D/configs/: 3d_test.yaml  3d_test_all.yaml
src/cellseg/segmentation/FOCUS3D/mask2former/: __init__.py  maskformer_model.py  maskformer_model_win.py
src/cellseg/segmentation/FOCUS3D/mask2former/data/: data_mapper.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/: criterion.py  criterion_win.py  matcher.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/: engine_pretrain.py  mae3d_backbone.py  mae3d_backbone_win.py  models_mae.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/util/: datasets.py  lars.py  lr_decay.py  lr_sched.py  misc.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/vitadapter/: __init__.py  adapter_modules.py  unet_parts.py  vitadapter.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/vitadapter/ops/: setup.py  test.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/vitadapter/ops/functions/: ms_deform_attn_func.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/vitadapter/ops/modules/: ms_deform_attn.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/vitadapter/ops/src/cuda/: ms_deform_attn_cuda.cu
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/backbone/vitadapter/util/: pos_embed.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/pixel_decoder/: fpn3d.py  fpn3d_win.py  msdeformattn3d.py  msdeformattn3d_win.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/pixel_decoder/ops/: setup.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/pixel_decoder/ops/functions/: ms_deform_attn_func.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/pixel_decoder/ops/modules/: ms_deform_attn.py
src/cellseg/segmentation/FOCUS3D/mask2former/modeling/transformer_decoder/: position_encoding_3d.py
src/cellseg/segmentation/FOCUS3D/mask2former/utils/: misc.py
src/focus3d/: __init__.py  _widget.py  napari.yaml
src/focus3d/analysis/: analysis.py  morphometry_engine.py
src/focus3d/basic/: curation.py
src/focus3d/segmentation/: mask2former_adapter.py  seg_io.py  segmentation.py
src/focus3d/segmentation/FOCUS3D/: fine_tune_function.py  help_function.py  inference.py  inference_win.py  train_net_3d.py
src/focus3d/segmentation/FOCUS3D/configs/: 3d_test copy.yaml  3d_test.yaml
src/focus3d/segmentation/FOCUS3D/mask2former/: config.py  config_win.py
src/focus3d/segmentation/FOCUS3D/mask2former/modeling/: __init__.py  point_features_3d.py
src/focus3d/segmentation/FOCUS3D/mask2former/modeling/backbone/: models_mae_win.py
src/focus3d/segmentation/FOCUS3D/mask2former/modeling/backbone/util/: pos_embed.py
src/focus3d/segmentation/FOCUS3D/mask2former/modeling/backbone/vitadapter/: adapter_modules_win.py  vitadapter_win.py
src/focus3d/segmentation/FOCUS3D/mask2former/modeling/pixel_decoder/ops/: test.py
src/focus3d/segmentation/FOCUS3D/mask2former/modeling/transformer_decoder/: __init__.py  mask2former_transformer_decoder_3d.py  mask2former_transformer_decoder_3d_win.py  transformer_3d.py
tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
