[project]
name = "focus-3d"
version = "0.1.6"
description = "FOCUS-3D: a user-friendly napari plugin for interactive 3D cell segmentation, curation, and analysis"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  {name = "Qinghua Zhang"},
  {email = "zhangqh24@mails.tsinghua.edu.cn"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: napari",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Image Processing",
]
requires-python = ">=3.10"

# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly, such as PyQt5 or PySide2.
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
    "numpy",
    "magicgui",
    "qtpy",
    "scikit-image",
    "scipy",
    "pandas",
    "tifffile",
    "zarr",
    "imageio",
    "pyyaml",
    "requests",
    "dask",
    "fsspec",
    "numcodecs",
    "pillow",
    "matplotlib",
    "scikit-learn",
    "umap-learn",
]

[project.optional-dependencies]
gui = [
    "napari[all]",
]

[dependency-groups]
dev = [
    "tox-uv",
    "pytest",
    "pytest-cov",
    "pytest-qt",
    "napari[qt]",
]

[project.entry-points."napari.manifest"]
focus-3d = "focus3d:napari.yaml"

[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
focus3d = [
    "napari.yaml",
    "segmentation/FOCUS3D/configs/*.yaml",
    "segmentation/FOCUS3D/configs/*.yml",
    "segmentation/FOCUS3D/*.yaml",
    "segmentation/FOCUS3D/*.yml",
    "segmentation/FOCUS3D/LICENSE",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
# filterwarnings = ["error"]
log_cli_level = "INFO"
testpaths = ["tests"]

[tool.ruff]
line-length = 79
fix = true

# The FOCUS3D model implementation contains third-party/adapted model code
# and research scripts. Keep linting focused on the napari plugin wrapper.
extend-exclude = [
    "src/focus3d/segmentation/FOCUS3D/**",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E", "F", "W", # flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long; handled by formatter
    "UP006", "UP007", # type annotation; magicgui may require runtime type annotations
    "BLE001", # allow broad exception handling in GUI callbacks and worker threads
]
[tool.check-wheel-contents]
ignore = ["W002"]
